--- a/functions/views/layouts/config.pug
+++ b/functions/views/layouts/config.pug
@@ -65,7 +65,7 @@
             "tos": "docs/tos/",
             "profile": "perfil/",
             "viewProf": "ver-perfil/",
-            "drafts": "drafts/",
+            "drafts": "borradores/",
             "draftsCal": "calendarios/",
             "edit": "editar/",
             "editCal": "editar-calendario/"
