--- a/src/content/edit.pug
+++ b/src/content/edit.pug
@@ -4,6 +4,8 @@ block missHead
   else if LANG=="en"
     meta(name='description' content='Edit the Cookies')
 
+  link(rel="stylesheet" href=HOST+"/styles/edit.css")
+
   - const site="edit";
 
 block precontent
