--- a/src/content/index.pug
+++ b/src/content/index.pug
@@ -7,6 +7,8 @@ block missHead
   else if LANG=="en"
     meta(name='description' content='Science articles with chocolate chips. Articles of scientific diffusion and on curiosities.')
 
+  link(rel="stylesheet" href=HOST+"/styles/index.css")
+
   - const site="index";
 
 block content
