--- a/functions/views/layouts/config.pug
+++ b/functions/views/layouts/config.pug
@@ -82,7 +82,7 @@
             "profile": "profile/",
             "viewProf": "view-profile/",
             "drafts": "drafts/",
-            "draftsCal": "calendarios/",
+            "draftsCal": "calendars/",
             "edit": "edit/",
             "editCal": "edit-calendar/"
         }
