--- a/src/content/editCal.pug
+++ b/src/content/editCal.pug
@@ -15,9 +15,9 @@ block precontent
       .modal-content
         .modal-header
           if LANG=="es"
-            h5#mdlPublishL.modal-title Publicar el calendario
+            h5#mdlPublishL.modal-title Publicar el Calendario
           else if LANG=="en"
-            h5#mdlPublishL.modal-title Publish el calendario
+            h5#mdlPublishL.modal-title Publish the Calendar
           button#btnCanPublish1.close(type='button' data-dismiss='modal' aria-label='Close')
             span(aria-hidden='true') ×
         .modal-body
@@ -72,14 +72,11 @@ block precontent
                     | The translation overrides the changes in the current language
               .form-row
                 .form-group
-                if LANG=="es"
-                  label(for='inTransFrom') Traducir del
-                  select#inTransFrom.form-control(required)
-                    option(selected value="") Elegir...
-                else if LANG=="en"
-                  label(for='inTransFrom') Translate from
-                  select#inTransFrom.form-control(required)
-                    option(selected value="") Choose...
+                  if LANG=="es"
+                    label(for='inTransFrom') Traducir del
+                  else if LANG=="en"
+                    label(for='inTransFrom') Translate from
+                  select#inTransFrom.form-control(required name="selTransLang")
             #barTranslateCont.progress.my-2.d-none
               #barTranslate.progress-bar.progress-bar-striped.progress-bar-animated(role='progressbar' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100' style='width: 0%')
           .modal-footer
