revise other functions

--- a/functions/views/allCalsM.pug
+++ b/functions/views/allCalsM.pug
@@ -11,6 +11,7 @@ block missHead
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cal"]+year+'/')
+  link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/')
 
   title #{Buttons[LANG]["cal"]} #{year} - Science Cookies
 
