--- a/functions/views/archivo.pug
+++ b/functions/views/archivo.pug
@@ -11,6 +11,7 @@ block missHead
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"])
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"])
+  link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"])
   title #{Buttons[LANG]["cook"]} - Science Cookies
 
   - const site="cook";
