--- a/functions/views/allCalsY.pug
+++ b/functions/views/allCalsY.pug
@@ -11,6 +11,7 @@ block missHead
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cal"])
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cal"])
+  link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cal"])
   title #{Buttons[LANG]["cal"]} - Science Cookies
 
   - const site="allCalsY";
