--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -11,6 +11,7 @@ block missHead
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"]+year+'/'+sTri +'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"]+year+'/'+sTri +'/')
+  link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"]+year+'/'+sTri +'/')
   title #{Buttons[LANG]["cook"]} #{year} #{triLC} - Science Cookies
 
   - const site="cookTri";
