--- a/functions/views/calendario.pug
+++ b/functions/views/calendario.pug
@@ -8,6 +8,7 @@ block missHead
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/'+month+'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cal"]+year+'/'+month+'/')
+  link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/'+month+'/')
   link(rel="stylesheet" href=HOST+"/styles/cal.css")
 
   title #{title} - Science Cookies
