--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -8,6 +8,7 @@ block missHead
   
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"]+month+'/'+file+'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"]+month+'/'+file+'/')
+  link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"]+month+'/'+file+'/')
   link(rel="stylesheet" href=HOST+"/styles/cookie.css")
 
   title #{title} - Science Cookies
