--- a/src/content/edit.pug
+++ b/src/content/edit.pug
@@ -242,7 +242,7 @@ block content
         .row.mb-2
           label.col-sm-2.col-lg-4.col-form-label Nombre del archivo
           .col
-            input#inFile.form-control(type='text' value='titulo-galleta' placeholder='titulo-galleta')
+            input#inFile.form-control(type='text' placeholder='titulo-galleta')
         .row.mb-2
           label.col-sm-2.col-form-label Descripción
           .col
@@ -256,7 +256,7 @@ block content
         .row.mb-2
           label.col-sm-2.col-lg-4.col-form-label File name
           .col
-            input#inFile.form-control(type='text' value='titulo-galleta' placeholder='titulo-galleta')
+            input#inFile.form-control(type='text' placeholder='titulo-galleta')
         .row.mb-2
           label.col-sm-2.col-form-label Description
           .col
