--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -1,5 +1,5 @@
 //- Config
-- const HOST = "https://sciencecookies--pr35-translations-umo1fjoj.web.app/";
+- const HOST = "https://sciencecookies--pr35-translations-sowxobgp.web.app";
 //-   https://sciencecookies.net
 //-   http://localhost:5000
 //-   https://sciencecookies--pr35-translations-umo1fjoj.web.app/
