--- a/functions/views/allCalsM.pug
+++ b/functions/views/allCalsM.pug
@@ -6,14 +6,18 @@ block lang
 block missHead
   if LANG=="es"
     meta(name='description' content="Aquí puedes encontrar todos los calendarios astronómicos del "+year+".")
+    meta(property="og:description" content="Aquí puedes encontrar todos los calendarios astronómicos del "+year+".")
   else if LANG=="en"
     meta(name='description' content="Here you can find all the astronomic calendars from "+year+".")
+    meta(property="og:description" content="Here you can find all the astronomic calendars from "+year+".")
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cal"]+year+'/')
   link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/')
+  meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cal"]+year+'/')
 
-  title #{Buttons[LANG]["cal"]} #{year} - Science Cookies
+  title Science Cookies - #{Buttons[LANG]["cal"]} #{year}
+  meta(property="og:title" content='Science Cookies - #{Buttons[LANG]["cal"]} #{year}')
 
   - const site="allCalsM";
 
