--- a/src/content/drafts.pug
+++ b/src/content/drafts.pug
@@ -1,8 +1,10 @@
 block missHead
   if LANG=="es"
     meta(name='description' content='Revisa y administra tus borradores')
+    meta(property="og:description" content='Revisa y administra tus borradores')
   else if LANG=="en"
     meta(name='description' content='Review and manage your drafts')
+    meta(property="og:description" content='Review and manage your drafts')
 
   - const site="drafts";
 
