--- a/src/content/draftsCal.pug
+++ b/src/content/draftsCal.pug
@@ -1,8 +1,10 @@
 block missHead
   if LANG=="es"
     meta(name='description' content='Revisa y edita los calendarios')
+    meta(property="og:description" content='Revisa y edita los calendarios')
   else if LANG=="en"
     meta(name='description' content='Review and edit the calendars')
+    meta(property="og:description" content='Review and edit the calendars')
 
   - const site="draftsCal";
 
