--- a/src/content/edit.pug
+++ b/src/content/edit.pug
@@ -1,8 +1,10 @@
 block missHead
   if LANG=="es"
     meta(name='description' content='Edita las Galletas')
+    meta(property="og:description" content='Edita las Galletas')
   else if LANG=="en"
     meta(name='description' content='Edit the Cookies')
+    meta(property="og:description" content='Edit the Cookies')
 
   link(rel="stylesheet" href=HOST+"/styles/edit.css")
 
