--- a/src/content/editCal.pug
+++ b/src/content/editCal.pug
@@ -1,8 +1,10 @@
 block missHead
   if LANG=="es"
     meta(name='description' content='Edita los Calendarios')
+    meta(property="og:description" content='Edita los Calendarios')
   else if LANG=="en"
     meta(name='description' content='Edit the Calendars')
+    meta(property="og:description" content='Edit the Calendars')
 
   link(rel="stylesheet" href=HOST+"/styles/editCal.css")
   
