--- a/src/content/index.pug
+++ b/src/content/index.pug
@@ -4,8 +4,10 @@ block missHead
 
   if LANG=="es"
     meta(name='description' content='Artículos de ciencia con chispas de chocolate. Artículos de difusión científica y sobre curiosidades.')
+    meta(property="og:description" content='Artículos de ciencia con chispas de chocolate. Artículos de difusión científica y sobre curiosidades.')
   else if LANG=="en"
     meta(name='description' content='Science articles with chocolate chips. Articles of scientific diffusion and on curiosities.')
+    meta(property="og:description" content='Science articles with chocolate chips. Articles of scientific diffusion and on curiosities.')
 
   link(rel="stylesheet" href=HOST+"/styles/index.css")
 
