--- a/src/content/profile.pug
+++ b/src/content/profile.pug
@@ -1,8 +1,10 @@
 block missHead
   if LANG=="es"
     meta(name='description' content='Tu perfíl de Science Cookies. Aquí puedes ver las galletas que te gustan y tus favoritas y cambiar algunas preferencias.')
+    meta(property="og:description" content='Tu perfíl de Science Cookies. Aquí puedes ver las galletas que te gustan y tus favoritas y cambiar algunas preferencias.')
   else if LANG=="en"
     meta(name='description' content='Your Science Cookies profile. Here you can see the cookies you like and your favorites and change some preferences.')
+    meta(property="og:description" content='Your Science Cookies profile. Here you can see the cookies you like and your favorites and change some preferences.')
 
   - const site="profile";
 
