--- a/src/content/who.pug
+++ b/src/content/who.pug
@@ -1,8 +1,10 @@
 block missHead
   if LANG=="es"
     meta(name='description' content='En este blog escribimos artículos de difusión científica y sobre curiosidades y esperamos lograr alimentar la curiosidad.')
+    meta(property="og:description" content='En este blog escribimos artículos de difusión científica y sobre curiosidades y esperamos lograr alimentar la curiosidad.')
   else if LANG=="en"
     meta(name='description' content='In this blog we write articles for scientific diffusion and curiosities in the hope to feed the curiosity.')
+    meta(property="og:description" content='In this blog we write articles for scientific diffusion and curiosities in the hope to feed the curiosity.')
 
   - const site="who";
 
