--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -6,13 +6,18 @@ block lang
 block missHead
   if LANG=="es"
     meta(name='description' content="Aquí puedes encontrar todas las galletas de "+triLC+" del "+year+".")
+    meta(property="og:description" content="Aquí puedes encontrar todas las galletas de "+triLC+" del "+year+".")
   else if LANG=="en"
     meta(name='description' content="Here you can find all Cookies from "+triLC+" of "+year+".")
+    meta(property="og:description" content="Here you can find all Cookies from "+triLC+" of "+year+".")
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"]+year+'/'+sTri +'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"]+year+'/'+sTri +'/')
   link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"]+year+'/'+sTri +'/')
-  title #{Buttons[LANG]["cook"]} #{year} #{triLC} - Science Cookies
+  meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cook"]+year+'/'+sTri +'/')
+
+  title Science Cookies - #{Buttons[LANG]["cook"]} #{year} #{triLC}
+  meta(property="og:title" content='Science Cookies - #{Buttons[LANG]["cook"]} #{year} #{triLC}')
 
   - const site="cookTri";
 
