--- a/functions/views/calendario.pug
+++ b/functions/views/calendario.pug
@@ -5,13 +5,17 @@ block lang
 
 block missHead
   meta(name='description' content= descriptionShort)
+  meta(property="og:description" content= descriptionShort)
 
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/'+month+'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cal"]+year+'/'+month+'/')
   link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cal"]+year+'/'+month+'/')
+  meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cal"]+year+'/'+month+'/')
+
   link(rel="stylesheet" href=HOST+"/styles/cal.css")
 
-  title #{title} - Science Cookies
+  title Science Cookies - #{title}
+  meta(property="og:title" content='Science Cookies - #{title}')
 
   - const site="cal";
 
