--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -5,13 +5,18 @@ block lang
 
 block missHead
   meta(name='description' content= description)
+  meta(property="og:description" content= description)
   
   link(rel="alternate" hreflang="es" href=HOST+'/'+NavLinks["es"]["cook"]+month+'/'+file+'/')
   link(rel="alternate" hreflang="en" href=HOST+'/'+NavLinks["en"]["cook"]+month+'/'+file+'/')
   link(rel="alternate" hreflang="x-default" href=HOST+'/'+NavLinks["es"]["cook"]+month+'/'+file+'/')
+  meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cook"]+month+'/'+file+'/')
+
   link(rel="stylesheet" href=HOST+"/styles/cookie.css")
 
-  title #{title} - Science Cookies
+  title Science Cookies - #{title}
+  meta(property="og:title" content='Science Cookies - #{title}')
+  meta(property="og:image" content='#{picUrl}')
 
   - const site="cookie";
 
