--- a/src/includes/head.pug
+++ b/src/includes/head.pug
@@ -1,6 +1,12 @@
 meta(charset='utf-8')
 meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
 meta(name='google-site-verification' content='pffq0MGMyrYBsgL7f9drofhXb0nfHmqE8-h1YZf83xA')
+
+meta(property="og:type" content="website")
+meta(property="og:locale" content=LANG )
+
+meta(name="root-url" content=HOST )
+
 link(rel='shortcut icon' href=HOST+'/img/logoT.svg')
 
 
