--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -1,8 +1,7 @@
 //- Config
-- const HOST = "https://sciencecookies--pr35-translations-sowxobgp.web.app";
+- const HOST = "https://sciencecookies.net";
 //-   https://sciencecookies.net
 //-   http://localhost:5000
-//-   https://sciencecookies--pr35-translations-sowxobgp.web.app
 - const FBVERSION = "8.3.2";
 - const FBUIVERSION = "4.8.0";
 
