--- a/functions/views/archTrim.pug
+++ b/functions/views/archTrim.pug
@@ -17,7 +17,7 @@ block missHead
   meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cook"]+year+'/'+sTri +'/')
 
   title Science Cookies - #{Buttons[LANG]["cook"]} #{year} #{triLC}
-  meta(property="og:title" content='Science Cookies - #{Buttons[LANG]["cook"]} #{year} #{triLC}')
+  meta(property="og:title" content='Science Cookies - '+Buttons[LANG]["cook"]+' '+year+' '+triLC)
 
   - const site="cookTri";
 
