--- a/functions/views/archivo.pug
+++ b/functions/views/archivo.pug
@@ -17,7 +17,7 @@ block missHead
   meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cook"])
 
   title Science Cookies - #{Buttons[LANG]["cook"]}
-  meta(property="og:title" content='Science Cookies - #{Buttons[LANG]["cook"]}')
+  meta(property="og:title" content='Science Cookies - '+Buttons[LANG]["cook"])
 
   - const site="cook";
 
