--- a/functions/views/calendario.pug
+++ b/functions/views/calendario.pug
@@ -15,7 +15,7 @@ block missHead
   link(rel="stylesheet" href=HOST+"/styles/cal.css")
 
   title Science Cookies - #{title}
-  meta(property="og:title" content='Science Cookies - #{title}')
+  meta(property="og:title" content='Science Cookies - '+title)
 
   - const site="cal";
 
