--- a/functions/views/allCalsM.pug
+++ b/functions/views/allCalsM.pug
@@ -17,7 +17,7 @@ block missHead
   meta(property="og:url" content=href=HOST+'/'+NavLinks[LANG]["cal"]+year+'/')
 
   title Science Cookies - #{Buttons[LANG]["cal"]} #{year}
-  meta(property="og:title" content='Science Cookies - #{Buttons[LANG]["cal"]} #{year}')
+  meta(property="og:title" content='Science Cookies - '+Buttons[LANG]["cal"]+' '+year)
 
   - const site="allCalsM";
 
