--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -16,7 +16,7 @@ block missHead
 
   title Science Cookies - #{title}
   meta(property="og:title" content='Science Cookies - #{title}')
-  meta(property="og:image" content='#{picUrl}')
+  meta(property="og:image" content=picUrl)
 
   - const site="cookie";
 
