--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -15,7 +15,7 @@ block missHead
   link(rel="stylesheet" href=HOST+"/styles/cookie.css")
 
   title Science Cookies - #{title}
-  meta(property="og:title" content='Science Cookies - #{title}')
+  meta(property="og:title" content='Science Cookies - '+title)
   meta(property="og:image" content=picUrl)
 
   - const site="cookie";
