--- a/src/layouts/main.pug
+++ b/src/layouts/main.pug
@@ -21,6 +21,7 @@ html(lang=LANG)
         else if LANG=="en" 
           title Science Cookies - Science articles with chocolate chips
           meta(property="og:title" content='Science Cookies - Science articles with chocolate chips')
+        meta(property="og:image" content=HOST+"/img/logoT.svg")
       else 
         title Science Cookies - #{Buttons[LANG][site]}
         meta(property="og:title" content='Science Cookies - '+Buttons[LANG][site])
