--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -1,5 +1,5 @@
 //- Config
-- const HOST = "https://sciencecookies.net";
+- const HOST = "https://sciencecookies.net/test";
 //-   https://sciencecookies.net
 //-   http://localhost:5000
 - const FBVERSION = "8.3.2";
