--- a/src/layouts/config.pug
+++ b/src/layouts/config.pug
@@ -1,5 +1,5 @@
 //- Config
-- const HOST = "https://sciencecookies.net/";
+- const HOST = "https://sciencecookies--pr37-testing-gitignore-ok1gl4k3.web.app";
 //-   https://sciencecookies.net
 //-   http://localhost:5000
 //-   https://sciencecookies--pr37-testing-gitignore-ok1gl4k3.web.app
