og:img calendar & restore wf

--- a/functions/views/calendario.pug
+++ b/functions/views/calendario.pug
@@ -16,6 +16,7 @@ block missHead
 
   title Science Cookies - #{title}
   meta(property="og:title" content='Science Cookies - '+title)
+  meta(property="og:image" content=picUrl)
 
   - const site="cal";
 
