reactivate adsense - new code

--- a/src/content/index.pug
+++ b/src/content/index.pug
@@ -1,6 +1,6 @@
 block missHead
   //- Adsense
-  script(data-ad-client='ca-pub-7663681425693792' async='' src='https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
+  script(data-ad-client="ca-pub-7663681425693792" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js")
 
   if LANG=="es"
     meta(name='description' content='Artículos de ciencia con chispas de chocolate. Artículos de difusión científica y sobre curiosidades.')
