--- a/src/includes/head.pug
+++ b/src/includes/head.pug
@@ -19,9 +19,10 @@ script.
     })(window, document, "clarity", "script", "56t5m147ti");
 
 //- Font awesome
-script(src='https://kit.fontawesome.com/cf642fd47e.js' crossorigin='anonymous')
+link(rel='stylesheet' href=HOST+"/vendor/font-awesome/css/all.min.css")
 
 //- Bootstrap
+//-link(rel='stylesheet' href=HOST+"/vendor/bootstrap/bootstrap.css")
 link(rel='stylesheet' href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin='anonymous')
 
 //- Google fonts
