firebase-database mirgration

--- a/functions/views/galleta.pug
+++ b/functions/views/galleta.pug
@@ -164,9 +164,10 @@ block content
           span#favCount.badge.badge-dark.ml-w
       .col-auto
         button#btnLike.btn.btn-outline-light.p-1.disabled.m-2
-          | Like
+          | Like 
           i#btnLikeTxt.far.fa-thumbs-up
           span#likeCount.badge.badge-dark.m-2
+    //-button#btnLike.btn.btn-outline-light.p-1.m-2(onclick="window.hh();") aaaaa
 
   //- Comentarios
   .row
